--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <span class="stories">STORIES</span>
                 <span class="contact">CONTACT</span>
             </div>
+            <img src="./assets/Header__menu.svg" alt="header menu" class="header_menu">
         </header>
-        <img src="./assets/Header__menu.svg" alt="header menu" class="header_menu">
         <div class="hero__block">
             <img src="./assets/[PLACEHOLDER LOGO].png" alt="logo for headline" class="logo1">
             <h2 class="headline">Your Headline<br>Here</h2>
@@ -29,9 +29,8 @@
         </div>
     </div>
     <div class="main">
-        <h2 class="section__headline">This is the Section Headline,<br> Continues to Two Lines</h2>
-        <h2 class="section__headline2">This is the Section<br> Headline, Continues to <br>Two Lines</h2>
-        <p class="lorem-2">Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit sed do eiusmod.</p>
+        <h2 class="section__headline">This is the Section Headline, Continues to Two Lines</h2>
+        <p class="lorem-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod.</p>
         <div class="text-container">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis</p>
             <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -39,8 +38,8 @@
         <button>READ MORE</button>
     </div>
     <div class="learn__more-container">
-        <h2 class="learn_more">Learn more <br> about our culture...</h2>
-        <img src="/assets/Learn-more-button.svg" alt="polygon" class="polygon">
+        <h2 class="learn_more">Learn more about our culture...</h2>
+        <img src="./assets/Learn-more-button.svg" alt="polygon" class="polygon">
         <p class="lorem-3">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
     </div>
     <footer>
@@ -51,5 +50,6 @@
         <span class="direction_column">123 Street,<br> Anytown, USA 12345</span>
         <span class="website_column">hello@website.com </span>
         <span class="rights_column">© 2021 Project. All rights reserved</span>
+    </footer>
 </body>
 </html>
